--- a/index.html
+++ b/index.html
@@ -214,52 +214,52 @@
             </div>
             <br />
             <div class="card-deck">
-                    <div class="card p-3 bg-white rounded h-100">
-                        <div class="row card-body">
-                            <img class="col-sm-4" src="./images/THAYPHUOC.png" alt="sans" height="100%" width="40%" />
-                            <div class="col-sm-6">
-                                <h4 class="card-title headIcon">Th.S Dương Hữu Phước</h4>
-                                <p class="card-text">Chuyên môn: C/C++, .NET
-                                    Kinh nghiệm: 9 năm giảng dạy.</p>
-                            </div>
+                <div class="card p-3 bg-white rounded">
+                    <div class="row card-body">
+                        <img class="col-sm-4" src="./images/THAYPHUOC.png" alt="sans" height="100%" width="100%" />
+                        <div class="col-sm-6">
+                            <h4 class="card-title headIcon">Th.S Dương Hữu Phước</h4>
+                            <p class="card-text">Chuyên môn: C/C++, .NET
+                                Kinh nghiệm: 9 năm giảng dạy.</p>
                         </div>
                     </div>
-                    <div class="card shadow p-3 bg-white rounded">
-                        <div class="row card-body">
-                            <img class="col-sm-4" src="./images/THAYDUY.png" alt="sans" height="100%" width="100%" />
-                            <div class="col-sm-6">
-                                <h4 class="card-title headIcon">Th.S Huỳnh Khắc Duy</h4>
-                                <p class="card-text">Chuyên môn: C, C++, C#, Java, VB, VB.Net, PHP, ASP, ASP.Net…
-                                    Kinh nghiệm: 10 năm giảng dạy</p>
-                            </div>
+                </div>
+                <div class="card p-3 bg-white rounded ">
+                    <div class="row card-body">
+                        <img class="col-sm-4" src="./images/THAYDUY.png" alt="sans" height="100%" width="100%" />
+                        <div class="col-sm-6">
+                            <h4 class="card-title headIcon">Th.S Huỳnh Khắc Duy</h4>
+                            <p class="card-text">Chuyên môn: C, C++, C#, Java, VB, VB.Net, PHP, ASP, ASP.Net…
+                                Kinh nghiệm: 10 năm giảng dạy</p>
                         </div>
                     </div>
+                </div>
             </div>
             <div class="card-deck">
-                    <div class="card shadow p-3 bg-white rounded ">
-                        <div class="row card-body ">
-                            <img class="col-sm-4" src="./images/THAYHOANG.png" alt="sans" height="100%" width="40%" />
-                            <div class="col-sm-6">
-                                <h4 class="card-title headIcon">Th.S Nguyễn Văn Hoàng</h4>
-                                <p class="card-text">Chuyên môn: C#, Java, PHP,…
-                                    Kinh nghiệm: trên 10 năm giảng dạy.</p>
-                            </div>
+                <div class="card p-3 bg-white rounded">
+                    <div class="row card-body ">
+                        <img class="col-sm-4" src="./images/THAYHOANG.png" alt="sans" height="100%" width="100%" />
+                        <div class="col-sm-6">
+                            <h4 class="card-title headIcon">Th.S Nguyễn Văn Hoàng</h4>
+                            <p class="card-text">Chuyên môn: C#, Java, PHP,…
+                                Kinh nghiệm: trên 10 năm giảng dạy.</p>
                         </div>
                     </div>
-                    <div class="card shadow p-3 bg-white rounded">
-                        <div class="row card-body">
-                            <img class="col-sm-4" src="./images/THAYHUNG.png" alt="sans" height="100%" width="40%" />
-                            <div class="col-sm-6">
-                                <h4 class="card-title headIcon">Th.S Trần Văn Hùng</h4>
-                                <p class="card-text">Chuyên môn: Java, .Net, PHP.
-                                    Kinh nghiệm: trên 10 năm giảng dạy.</p>
-                            </div>
+                </div>
+                <div class="card shadow p-3 bg-white rounded">
+                    <div class="row card-body">
+                        <img class="col-sm-4" src="./images/THAYHUNG.png" alt="sans" height="100%" width="100%" />
+                        <div class="col-sm-6">
+                            <h4 class="card-title headIcon">Th.S Trần Văn Hùng</h4>
+                            <p class="card-text">Chuyên môn: Java, .Net, PHP.
+                                Kinh nghiệm: trên 10 năm giảng dạy.</p>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </div>
-    <br/>
+    <br />
     <!------------------------------->
 
 
