--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="card-deck">
                 <div class="card p-3 bg-white rounded">
                     <div class="row card-body">
-                        <img class="col-sm-4" src="./images/THAYPHUOC.png" alt="sans" height="100%" width="100%" />
+                        <img class="col-sm-4" src="./images/THAYPHUOC.png" alt="sans" height="auto" width="100%"  />
                         <div class="col-sm-6">
                             <h4 class="card-title headIcon">Th.S Dương Hữu Phước</h4>
                             <p class="card-text">Chuyên môn: C/C++, .NET
@@ -226,7 +226,7 @@
                 </div>
                 <div class="card p-3 bg-white rounded ">
                     <div class="row card-body">
-                        <img class="col-sm-4" src="./images/THAYDUY.png" alt="sans" height="100%" width="100%" />
+                        <img class="col-sm-4" src="./images/THAYDUY.png" alt="sans" height="auto" width="100%"  />
                         <div class="col-sm-6">
                             <h4 class="card-title headIcon">Th.S Huỳnh Khắc Duy</h4>
                             <p class="card-text">Chuyên môn: C, C++, C#, Java, VB, VB.Net, PHP, ASP, ASP.Net…
@@ -238,7 +238,7 @@
             <div class="card-deck">
                 <div class="card p-3 bg-white rounded">
                     <div class="row card-body ">
-                        <img class="col-sm-4" src="./images/THAYHOANG.png" alt="sans" height="100%" width="100%" />
+                        <img class="col-sm-4" src="./images/THAYHOANG.png" alt="sans" height="auto" width="100%"  />
                         <div class="col-sm-6">
                             <h4 class="card-title headIcon">Th.S Nguyễn Văn Hoàng</h4>
                             <p class="card-text">Chuyên môn: C#, Java, PHP,…
@@ -248,7 +248,7 @@
                 </div>
                 <div class="card shadow p-3 bg-white rounded">
                     <div class="row card-body">
-                        <img class="col-sm-4" src="./images/THAYHUNG.png" alt="sans" height="100%" width="100%" />
+                        <img class="col-sm-4" src="./images/THAYHUNG.png" alt="sans" height="auto" width="100%" />
                         <div class="col-sm-6">
                             <h4 class="card-title headIcon">Th.S Trần Văn Hùng</h4>
                             <p class="card-text">Chuyên môn: Java, .Net, PHP.
