--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">TRANG CHỦ <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="index.html">TRANG CHỦ <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" href="">GIỚI THIỆU KHÓA HỌC</a>
+                                <a class="nav-link disabled" href="khoahoc.html">GIỚI THIỆU KHÓA HỌC</a>
                             </li>
                         </ul>
                     </div>
