--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                             <li class="nav-item active">
                                 <a class="nav-link" href="index.html">TRANG CHỦ <span class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled" href="khoahoc.html">GIỚI THIỆU KHÓA HỌC</a>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="khoahoc.html">GIỚI THIỆU KHÓA HỌC</a>
                             </li>
                         </ul>
                     </div>
